--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+0.2.4
+- Now white marks before %?pli{ are ignored
 0.2.3
 - Poprawiony b³±d zwi±zany z popsutymi plikami eps, teraz wy¶wietla ifnormacjê
 - Poprawione numerowanie cyframi rzymskimi
